# uqbench

./: .gitattributes  .gitignore  GOALS.md  README.md  ROADMAP.md  pyproject.toml
bayescal/models/: __init__.py  interface.py  mcmcffn.py  method_registry.py  tempscaledffn.py
bayescal/utils/: model_export.py  model_result.py  toy_dataset.py
docs/: api.md
experiments/hyperopt/: bayesian_fnn_study.json  hyperopt_summary.json
experiments/results/: bayesian_cifar10_metadata.json  bayesian_cifar10_params.flax  dropout_ffn_cifar10_metadata.json  dropout_ffn_cifar10_params.flax  ffn_cifar10_metadata.json  ffn_cifar10_params.flax  toy_benchmark.json
notebooks/: sample_bayesian_fnn.ipynb  train.ipynb
notebooks/models/bayesianfnn/: model.json
notebooks/models/bayesianfnn/checkpoints/0/: _CHECKPOINT_METADATA
notebooks/models/bayesianfnn/checkpoints/0/default/: _METADATA  _sharding  manifest.ocdbt
notebooks/models/bayesianfnn/checkpoints/0/default/array_metadatas/: process_0
notebooks/models/bayesianfnn/checkpoints/0/default/ocdbt.process_0/: manifest.ocdbt
notebooks/models/dropoutfnn/: model.json
notebooks/models/dropoutfnn/checkpoints/0/: _CHECKPOINT_METADATA
notebooks/models/dropoutfnn/checkpoints/0/default/: _sharding  manifest.ocdbt
notebooks/models/fnn/: model.json
notebooks/models/fnn/checkpoints/0/: _CHECKPOINT_METADATA
notebooks/models/fnn/checkpoints/0/default/: _METADATA  manifest.ocdbt
notebooks/models/laplacefnn/: map_params.npz  model.json  posterior.npz
notebooks/models/mcmcfnn/: model.json  posterior_samples.npz
scripts/: benchmark_toy.py  compare.py  evaluate.py  evaluate_all.py  hyperopt_toy.py  plot_pareto.py  plot_toy_dataset.py  plot_toy_posteriors.py  train.py  train_all.py
tests/: __init__.py  test_bayesian_conv2d.py  test_data.py  test_evaluation.py  test_models.py
uqbench/: __init__.py  config.py
uqbench/api/: __init__.py  endpoints.py  main.py
uqbench/data/: __init__.py  loaders.py  preprocessing.py
uqbench/evaluation/: __init__.py  calibration.py  metrics.py  ood.py
uqbench/models/: __init__.py  bayescnn.py  bayesffn.py  cnn.py  fnn.py  laplaceffn.py  method_registry.py  tempscaledffn.py
uqbench/models/layers/: __init__.py  bayesianconv2d.py  bayesiandense.py
uqbench/training/: __init__.py  optimizers.py  trainer.py
uqbench/utils/: __init__.py  logging.py  model_export.py  model_result.py  toy_dataset.py  toy_training.py  toy_visualization.py  visualization.py
(+3 files in other folders)
